--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-ul{
-    list-style-type: none;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+body{
+    font-family: roboto, sans-serif;
+}
+header{
+    display:flex;
 
 }
-a{
-    text-decoration: none;
-    color:#e5e7eb;
-    background-color:#1f2927;
+h1{
+    height:5vh;
+    width:50vw;
 }
