--- a/style.css
+++ b/style.css
@@ -6,11 +6,18 @@
 body {
   font-family: roboto, sans-serif;
 }
-
+footer,
 .hero {
   background-color: #1f2937;
   color: #f9faf8;
   padding: 0 10%;
+}
+.hero a,
+.saying P,
+.sign_up p {
+  font: 18px;
+  color: #e5e7eb;
+  font-weight: normal;
 }
 header {
   display: flex;
@@ -19,6 +26,13 @@ header {
 h1 {
   height: 5vh;
   width: 50vw;
+  font: bolder;
+  font-size: 24px;
+  color: #f9faf8;
+}
+.container h2 {
+  font-size: 48px;
+  font-weight: bold;
 }
 ul {
   list-style-type: none;
@@ -47,10 +61,12 @@ button {
   padding: 8px;
   border-radius: 8px;
   width: 90px;
+  box-shadow: none;
 }
+
 .more-information {
-  margin-top: 32px;
-  margin-bottom: 32px;
+  margin-top: 64px;
+  margin-bottom: 128px;
 }
 .img-details img {
   height: 20vh;
@@ -60,29 +76,63 @@ button {
 }
 .img-details {
   display: flex;
-  padding: 0 10%;
+  padding: 24px 10%;
   justify-content: center;
   gap: 32px;
 }
-h2 {
+h3 {
+  font-size: 36px;
+  font-weight: bolder;
   text-align: center;
+  color: #1f2937;
 }
 .golo {
   height: 20vh;
   width: 15vw;
 }
 .testimonial {
-  padding: 200px 32px;
+  padding: 10% 20%;
   text-align: center;
+  background-color: #e5e7eb;
+}
+.testimonial p {
+  font-size: 38px;
+  font-style: italic;
+  color: #1f2937;
+  text-align: left;
+}
+.testimonial .oli {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 28px;
+  font-weight: bold;
+  color: #1f2937;
+  padding-right: 32px;
 }
 .sign_up {
-  padding: 200px 32px;
+  margin: 10% auto;
+  border-radius: 16px;
+
+  width: 80vw;
+  padding: 32px 32px;
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  border-collapse: collapse;
+  background-color: #3882f6;
+}
+.sign_up button {
+  align-self: center;
 }
 footer {
   padding: 20px;
   width: 100vw;
-  color: #f9faf8;
-  background-color: black;
+
   text-align: center;
+}
+.text {
+  font: 24px;
+  color: #f9faf8;
+  font-weight: bold;
+  text-align: left;
 }
