--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ a {
 .container {
   display: flex;
   justify-content: space-between;
+  padding-top: 40px;
+  padding-bottom: 42px;
 }
 .header-photo img {
   height: 30vh;
